<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/firstTextTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/first_place_text"
        android:textSize="@dimen/main_text_size_24sp"
        app:layout_constraintBottom_toTopOf="@+id/goNextBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goNextBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_next"
        android:textSize="@dimen/main_text_size_24sp"
        app:layout_constraintBottom_toTopOf="@+id/resultLineLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstTextTV" />

    <LinearLayout
        android:id="@+id/resultLineLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textSize="@dimen/main_text_size_24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goNextBTN">

        <TextView
            android:id="@+id/resultTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_size_to_resilt_title_20dp"
            android:layout_marginRight="@dimen/margin_size_10dp"
            android:text="@string/received_result"
            android:textSize="@dimen/main_text_size_24sp" />

        <TextView
            android:id="@+id/resultViewTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/main_text_size_24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>